--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
-    "module": "es2015",
-    "target": "es6",
-    "moduleResolution": "Node",
+    "module": "es6",
+    "target": "es5",
+    "moduleResolution": "node",
     "outDir": "build",
     "baseUrl": "src/",
     "sourceMap": true,
     "strict": true,
-    "experimentalDecorators": true,
     "noImplicitReturns": true,
     "allowSyntheticDefaultImports": true,
     "allowUnreachableCode": false
