Add harvest bases. Harvest many sources. Refactor harvester role.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "strict": true,
     "noImplicitReturns": true,
     "allowSyntheticDefaultImports": true,
-    "allowUnreachableCode": false
+    "allowUnreachableCode": false,
+    "lib": ["es2017"]
   },
   "exclude": [
     "node_modules",
