--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "lodash": "^4.17.10",
     "screeps-api": "^1.6.1",
+    "source-map": "^0.6.1",
     "ts-jest": "^23.0.0"
   },
   "devDependencies": {
